style changes, remove targets add scoreboard

--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
 							<img src="assets/images/Gator5.png" alt="a cartoon image of an alligator sitting down">
 						</div>
 					</div>
+					<div class="top-scores">
+						<p class="yourScore">Your Score: <span></span></p>
+						<ol class="allScore"><span>Top Scores</span>
+							<li class="Score1"></li>
+							<li class="Score2"></li>
+							<li class="Score3"></li>
+						</ol>
+					</div>
 					<form>
 						<input type="radio" name="difficulty" id="easy" value="2000">
 						<label for="easy">Easy</label>
@@ -87,12 +95,6 @@
 					</form>
 				</div> <!-- start-info -->
 				<button class="start-button">Enter Game</button>
-				<p class="yourScore">Your Score: <span></span></p>
-				<ol class="allScore">Top Scores:
-					<li class="Score1"></li>
-					<li class="Score2"></li>
-					<li class="Score3"></li>
-				</ol>
 				<footer>
 					<p>Developed by Rose Gauthier and Ranjan Subbiah</p>
 					<ul> <span>Credits:</span>
