changing file names. Won't show up on server

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 					<div class="target">
 						<p>Target: </p>
 						<div class="target-images">
-							<img src="assets/images/Gator1.png" alt="a cartoon image of an alligator with an angry expression">
-							<img src="assets/images/Gator2.png" alt="a cartoon image of an alligator jumping in the air">
-							<img src="assets/images/Gator3.png" alt="a cartoon image of an alligator running">
-							<img src="assets/images/Gator4.png" alt="a cartoon image of an alligator giving two thumbs up">
-							<img src="assets/images/Gator5.png" alt="a cartoon image of an alligator sitting down">
+							<img src="assets/images/gator1.png" alt="a cartoon image of an alligator with an angry expression">
+							<img src="assets/images/gator2.png" alt="a cartoon image of an alligator jumping in the air">
+							<img src="assets/images/gator3.png" alt="a cartoon image of an alligator running">
+							<img src="assets/images/gator4.png" alt="a cartoon image of an alligator giving two thumbs up">
+							<img src="assets/images/gator5.png" alt="a cartoon image of an alligator sitting down">
 						</div>
 					</div>
 					<div class="top-scores">
